--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "mocha --recursive"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "http-status-codes": "^1.3.0",
     "mocha": "^4.0.1",
+    "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
+    "request": "^2.83.0",
     "winston": "^3.0.0-rc1"
   }
 }
