--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "web": "node ./bin/www",
+    "watcher": "node ./bin/watcher.js",
     "test": "mocha --recursive"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "express": "^4.16.2",
     "http-status-codes": "^1.3.0",
     "mocha": "^4.0.1",
+    "moment": "^2.19.4",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "request": "^2.83.0",
