--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
     "debug": "^3.1.0",
+    "es-collections": "0.0.2",
     "express": "^4.16.2",
     "http-status-codes": "^1.3.0",
     "mocha": "^4.0.1",
-    "moment": "^2.19.4",
+    "moment": "^2.20.1",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "request": "^2.83.0",
