--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "config": "^1.28.1",
+    "csv": "^2.0.0",
     "debug": "^3.1.0",
     "es-collections": "0.0.2",
     "express": "^4.16.2",
