--- a/package.json
+++ b/package.json
@@ -6,31 +6,42 @@
     "web": "node ./bin/www",
     "watcher": "node ./bin/watcher.js",
     "test": "mocha server/test --recursive",
-    "build": "webpack --progress --hide-modules --config config/production.webpack.config.js"
+    "build": "webpack --progress --hide-modules --config config/production.webpack.config.js",
+    "dev-client": "webpack --watch --progress --hide-modules --config config/production.webpack.config.js"
   },
   "dependencies": {
+    "admin-lte": "^2.4.2",
     "body-parser": "^1.18.2",
+    "bootstrap": "^3.3.7",
     "config": "^1.28.1",
     "csv": "^2.0.0",
     "debug": "^3.1.0",
     "es-collections": "0.0.2",
     "express": "^4.16.2",
     "http-status-codes": "^1.3.0",
+    "jquery": "^3.2.1",
     "mocha": "^4.0.1",
     "moment": "^2.20.1",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
+    "popper.js": "^1.12.9",
     "request": "^2.83.0",
     "vue": "^2.5.13",
+    "vue-good-table": "^1.18.6",
+    "vue-grid-layout": "^2.1.11",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "nodemon": "^1.14.8",
+    "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.6.2",
