--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    ["es2015", {
-      "modules": false
-    }]
+    ["es2015", { "modules": false}],
+    ["stage-2"]
   ],
   "plugins": ["transform-runtime"],
   "comments": false,
