--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "admin-lte": "^2.4.2",
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "config": "^1.28.1",
@@ -31,6 +32,7 @@
     "vue-good-table": "^1.18.6",
     "vue-grid-layout": "^2.1.11",
     "vue-route": "^1.5.1",
+    "vuex": "^3.0.1",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
@@ -38,6 +40,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.8",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
