--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
+    "chartjs-plugin-datalabels": "^0.2.0",
     "config": "^1.28.1",
     "csv": "^2.0.0",
     "debug": "^3.1.0",
@@ -27,8 +29,10 @@
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "popper.js": "^1.12.9",
+    "randomcolor": "^0.5.3",
     "request": "^2.83.0",
     "vue": "^2.5.13",
+    "vue-chartjs": "^3.1.0",
     "vue-good-table": "^1.18.6",
     "vue-grid-layout": "^2.1.11",
     "vue-route": "^1.5.1",
