--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "vue-chartjs": "^3.1.0",
     "vue-good-table": "^1.18.6",
     "vue-grid-layout": "^2.1.11",
-    "vue-route": "^1.5.1",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "winston": "^3.0.0-rc1"
   },
