implements endpoint and job for getting historical coin data

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.7.1",
     "chartjs-plugin-datalabels": "^0.2.0",
+    "cheerio": "^1.0.0-rc.2",
     "config": "^1.28.1",
     "csv": "^2.0.0",
     "debug": "^3.1.0",
