--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
 
   web:
-    image: docker-repo.raysha.de/cryptotrack-web
+    image: rainu/cryptotrack-web
     build:
       context: ./server/web/
     ports:
@@ -12,14 +12,14 @@ services:
       - db
 
   watch:
-    image: docker-repo.raysha.de/cryptotrack-watch
+    image: rainu/cryptotrack-watch
     build:
       context: ./server/watch/
     depends_on:
       - db
 
   course:
-    image: docker-repo.raysha.de/cryptotrack-course
+    image: rainu/cryptotrack-course
     build:
       context: ./server/course/
     depends_on:
