create version file in gitlab-ci instead of Dockerfile

--- a/server/web/Dockerfile
+++ b/server/web/Dockerfile
@@ -7,8 +7,7 @@ ENV NODE_ENV "production"
 COPY ./dist /application/
 WORKDIR /application/
 
-RUN  npm install &&\
-     echo "{\"version\": \"${CI_COMMIT_SHA}\", \"date\": $(date +'%s' )000}" > /application/public/version
+RUN  npm install
 
 EXPOSE 3000
 CMD ["node", "/application/application-web.js"]
